--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -1,10 +1,5 @@
 {
   "compilerOptions": {
-    "noImplicitAny": false,
-    "module": "esnext",
-    "noEmitOnError": true,
-    "removeComments": false,
-    "sourceMap": true,
     "target": "ES6",
     "lib": [
       "dom",
@@ -17,16 +12,13 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve"
   },
-  "exclude": [
-    "node_modules"
-  ],
   "include": [
     "src"
   ]
