--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "rxjs": "^6.6.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
     "web-vitals": "^0.2.4"
@@ -40,6 +41,8 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/uuid": "^8.3.0",
     "typescript": "^4.1.2"
   }
 }
