--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "rxjs": "^6.6.3",
     "semantic-ui-css": "^2.4.1",
@@ -44,7 +45,8 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   }
 }
