--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "react": "^17.0.1",
@@ -45,8 +45,9 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
+    "react-toastify": "^6.2.0",
     "typescript": "^4.1.3"
   }
 }
